2008-05-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Metadata/MetadataRowReader.cs
	* Mono.Cecil.Metadata/MetadataRowWriter.cs:
		Cache row counters delegates.
		Based on a patch by Carlo Kok <ck@remobjects.com>.

	* Mono.Cecil/TypeDefinition.cs
	* Mono.Cecil/MethodDefinition.cs
	* Mono.Cecil/DefaultImporter.cs
	* Mono.Cecil/ReflectionHelper.cs:
		Restore the generic context values instead of blindly
		overriding them. Based on a patch by Dzintars Avots.

	* Mono.Cecil/MarshalSpec.cs (CloneInto): add new method
	to clone MarshalSpec into a new container.

	* Mono.Cecil/ParameterDefinition.cs (Clone):
	* Mono.Cecil/FieldDefinition.cs (Clone):
	Use the new MarshalSpec.CloneInto method.
	Based on a patch by Dzintars Avots <davots@coverity.com>.

	* Mono.Cecil/MethodDefinition.cs (Clone): fix cloning of
	return types when they don't have a parameter.
	Patch by Dzintars Avots <davots@coverity.com>.

	* Mono.Cecil.Cil/CodeWriter.cs (ComputeMaxStack): compute max
	stack more precisely. Based on a patch by Daniel Grunwald,
	Contains code from Cecil.FlowAnalysis.

	* Mono.Cecil.Cil/MethodBody.cs (Clone): make sure the
	instruction linked list is properly constructed.

2008-04-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Cil/CodeReader.cs:
	* Mono.Cecil.Cil/ISymbolReader.cs:
		Move reading of debugging symbols where it's possible to
		reuse the existing Hashtable (offset, Instruction) in
		the debugging libraries. Change interface to allow
		passing the Hashtable.

2008-04-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.csproj
	* Mono.Cecil.dll.sources:
		Add Mono.Cecil.Cil/OpCodeNames.cs to the build.

	* Mono.Cecil.Cil/OpCodeNames.cs
	* Mono.Cecil.Cil/OpCode.cs
	* Mono.Cecil.Cil/OpCodes.cs:
		Reduce the OpCode struct size to 8 bytes (instead of 36).
		Based on the SRE.OpCode code found in corlib.

2008-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/AssemblyDefinition.cs:
		Short circut loop when module is found.
